syntax = "proto3";
package services;

import "google/protobuf/timestamp.proto";

/*
    Comments are used to record a message history
*/
message Comment {
    google.protobuf.Timestamp timestamp = 1;
    string text = 2;
}

/*
    Status is used to determine if experiments/samples have tagged processes, or if they have been announced via the message server
*/
enum Status {
    UN_INITIALIZED = 0;
    untagged = 1;
    tagged = 2;
    announced = 3;
}

/*
    HeraldData is the base type, used by both Experiment and Sample
*/
message HeraldData {
    google.protobuf.Timestamp created = 1;
    string label = 2;                            // the experiment or sample name
    repeated Comment history = 3;                // describes the history of the experiment
    Status status = 4;                           // describes if untagged/tagged/announced
    map<string, bool> tags = 5;                  // tagged services and their complete status (true=complete, false=incomplete)
    repeated string requestOrder = 6;            // the order to send requests to the tagged services
}

/*
    Experiment is used to describe a Nanopore sequencing run
*/
message Experiment {
    HeraldData metadata = 1;                    // the base info
    string outputDirectory = 2;                // where the experiment is stored
    string fast5OutputDirectory = 3;          // where the experiment fast5 data is stored
    string fastqOutputDirectory = 4;          // where the experiment fastq data is stored

}

/*
    Sample is used to describe a biological sample which is being sequenced as part of an Experiment
*/
message Sample {
    HeraldData metadata = 1;                   // the base info
    string parentExperiment = 2;
    int32 barcode = 3;
}
